--- a/index.html
+++ b/index.html
@@ -1,12 +1,134 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>조혜수's 웹퍼블리셔 Portfolio</title>
+  <link rel="stylesheet" href="web/css/fonts.css">
+  <link rel="stylesheet" href="web/css/reset.css">
+  <link rel="stylesheet" href="web/css/main.css">
+
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+  <script src="web/js/main.js"></script>
 </head>
 <body>
-  
+    <header>
+      <h1><span class="blind">건물주 신입 웹퍼블리셔 조혜수입니다</span></h1>
+      <ul id="gnb">
+        <li>Entrance</li>
+        <li>About Me</li>
+        <li>Web</li>
+        <li>Graphic</li>
+        <li>Contact</li>
+      </ul>
+    </header>
+    <main>
+      <section id="entrance" class="">
+        <div class="entrance_txt">
+          <h2>기다리고 있었습니다</h2>
+          <em>웹디자이너, 웹퍼블리셔, UI 디자이너</em>
+        </div>
+      </section>
+      <section id="about me" class="">
+        <div class="guide">
+          <!--본인 소개글 또는 인적사항 등-->
+        </div>
+        <div class="skill">
+          <!--학력 및 경력, 자격사항-->
+        </div>
+      </section>
+      <section id="web" class="">
+        <div class="container">
+          <h2>Web Design & Publishing</h2>
+          <div class="web_swiper">
+            <div class="swiper_wrap">
+              <div class="web_slide">
+                <img src="img/blank.png" alt="">
+                <div class="web_txt">
+                  <div class="work_title">이월드</div>
+                  <div class="work_summary">
+                    <!--작업물에 대한 간단한 설명-->
+                    <!--사용된 스킬-->
+                  </div>
+                  <div class="link">
+                    <a href="web/drive/" target="_blank">메인페이지</a>
+                  </div>
+                </div>
+              </div><!--//web_slide-->
+              <div class="web_slide">
+                <img src="img/blank.png" alt="">
+                <div class="web_txt">
+                  <div class="work_title">교촌</div>
+                  <div class="work_summary"></div>
+                  <div class="link"></div>
+                </div>
+              </div><!--//web_slide-->
+              <div class="web_slide">
+                <img src="img/blank.png" alt="">
+                <div class="web_txt">
+                  <div class="work_title">넥슨</div>
+                  <div class="work_summary"></div>
+                  <div class="link"></div>
+                </div>
+              </div><!--//web_slide-->
+              <div class="web_slide">
+                <img src="img/blank.png" alt="">
+                <div class="web_txt">
+                  <div class="work_title">지란지교</div>
+                  <div class="work_summary"></div>
+                  <div class="link"></div>
+                </div>
+              </div><!--//web_slide-->
+              <div class="web_slide">
+                <img src="img/blank.png" alt="">
+                <div class="web_txt">
+                  <div class="work_title">NHN</div>
+                  <div class="work_summary"></div>
+                  <div class="link">
+                    <a href="web/nhn/related_company.html" target="_blank">서브페이지1 - 주요관계사</a>
+                    <a href="web/nhn/press_Release.html" target="_blank">서브페이지2 - 보도자료</a>
+                  </div>
+                </div>
+              </div><!--//web_slide-->
+            </div><!--//swiper_wrap-->
+          </div><!--//web_swiper-->
+          <div class="web_pagination"></div><!--//web_pagination-->
+          <div class="web_prev"></div><!--//web_prev-->
+          <div class="web_next"></div><!--//web_next-->
+          <div class="web_scrollbar"></div><!--//web_scrollbar-->
+        </div><!--//container-->
+        
+      </section>
+      <section id="graphic" class="">
+        <div class="container">
+          <h2>Graphic Design</h2>
+          <ul class="tabs">
+            <li>전체</li>
+            <li>로고디자인</li>
+            <li>포스터디자인</li>
+          </ul>
+          <ul class="work_thumb">
+            <li><a href=""><img src="img/pf_1.jpg" alt=""></a></li>
+            <li><a href=""><img src="img/pf_2.jpg" alt=""></a></li>
+            <li><a href=""><img src="img/pf_3.jpg" alt=""></a></li>
+            <li><a href=""><img src="img/pf_4.jpg" alt=""></a></li>
+            <li><a href=""><img src="img/pf_5.jpg" alt=""></a></li>
+            <li><a href=""><img src="img/pf_6.jpg" alt=""></a></li>
+            <li><a href=""><img src="img/pf_7.jpg" alt=""></a></li>
+            <li><a href=""><img src="img/pf_8.jpg" alt=""></a></li>
+            <li><a href=""><img src="img/pf_9.jpg" alt=""></a></li>
+            <li><a href=""><img src="img/pf_10.jpg" alt=""></a></li>
+          </ul>
+        </div><!--//container-->
+      </section>
+      <section id="contact" class="">
+        <!--메일주소나 연락처? sns 오픈카톡이나 큐알 등-->
+      </section>
+    </main>
+    <footer>
+      본 페이지는 상업적 목적이 아닌 개인 포트폴리용으로 제작되었습니다. <br>
+      Copyright &copy; 2022. Hyesu Cho All rights reserved.
+    </footer>
 </body>
 </html>
